# generator-bryl

./: Bryla.h  CMakeLists.txt  GEMINI.md  Helikoida.cpp  Helikoida.h  Katenoida.cpp  Katenoida.h  KostkaMengera.cpp  KostkaMengera.h  Kula.cpp  Kula.h  MengerSponge.cpp  MengerSponge.h  Parameters.h  Stozek.cpp  Stozek.h  Szescian.cpp  Szescian.h  Torus.cpp  Torus.h  Vertex.h  Walec.cpp  Walec.h  WstegaMobiusa.cpp  WstegaMobiusa.h  brylawidget.cpp  brylawidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myglwidget.cpp  myglwidget.h  raport_wstepny.md
